Replace commons-lang3 with standard JRE calls